packages/ui/src/components/metrics-table/metrics-table.module.css
.root a {
  color: inherit;
  text-decoration: none;
}

.root a:hover,
.root a:active,
.root a:focus {
  color: var(--color-primary);
  text-decoration: underline;
}

/* columns */
.metricName {
  width: 100%;
}

.root .value {
  padding-left: var(--space-large);
  text-align: right;
  vertical-align: baseline;
}

.root .delta {
  padding-left: 0;
  text-align: left;
  font-size: var(--size-xsmall);
  vertical-align: baseline;
}

.root tbody .delta {
  line-height: 1.6rem; /* baseline alignment with the value */
}

.root .value.current {
  padding-right: var(--space-xxsmall);
}

/* columns overrides for showHeaderSum */
.showHeaderSum .headerRowColumns .value,
.showHeaderSum .headerRowColumns .delta {
  border-bottom: 0;
  padding-bottom: 0;
}

.headerRowTotals th {
  padding-top: 0 !important;
  font-weight: normal;
  font-size: var(--size-xsmall);
  vertical-align: middle;
}

/** rows */
.multipleRuns .unchanged th,
.multipleRuns .unchanged td {
  color: var(--color-text-light);
}

.root .empty {
  background: none !important;
  padding-top: var(--space-xxxlarge);
  padding-bottom: var(--space-xxxlarge);
  text-align: center;
}

/** Breakpoints */
.root tr {
  display: flex;
  flex-wrap: wrap;
}

.root tbody th {
  flex: 1 1 auto;
}

.root tbody th {
  flex: 1 1 100%;
}

.root tbody td {
  flex: 1 1 auto;
}

@media (min-width: 600px) {
  .root tr {
    display: table-row;
  }
}

